<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.steele.siblingagetracker.activities.MainActivity">
    <item
        android:id="@+id/action_sort_by_seniority"
        android:orderInCategory="100"
        android:title="@string/sort_by_seniority"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_name"
        android:orderInCategory="100"
        android:title="@string/sort_by_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_upcoming_birthday"
        android:orderInCategory="100"
        android:title="@string/sort_by_upcoming_birthday"
        app:showAsAction="never" />
</menu>
